WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232001
[LFC][IFC] Sometimes "arbitrary mid word break" does not mean "any position"
https://bugs.webkit.org/show_bug.cgi?id=232001
Summary
[LFC][IFC] Sometimes "arbitrary mid word break" does not mean "any position"
alan
Reported
2021-10-19 21:04:29 PDT
This is governed by
https://unicode.org/reports/tr14
Attachments
Patch
(7.29 KB, patch)
2021-10-19 21:29 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-10-19 21:29:11 PDT
Created
attachment 441847
[details]
Patch
EWS
Comment 2
2021-10-20 06:53:06 PDT
Committed
r284530
(
243272@main
): <
https://commits.webkit.org/243272@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 441847
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-10-20 06:54:20 PDT
<
rdar://problem/84460046
>
alan
Comment 4
2021-10-20 12:44:07 PDT
mid work. haha. thanks Darin.
Antti Koivisto
Comment 5
2021-10-20 21:44:06 PDT
No mid work breaks allowed
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug