[LFC][IFC] Sometimes "arbitrary mid work break" does not mean "any position" https://bugs.webkit.org/show_bug.cgi?id=232001

Reviewed by Antti Koivisto.

Source/WebCore:

Add a partial (and oversimplified) (XB/XA) type of line breaking for word-break: break-all.
This is governed by https://unicode.org/reports/tr14/.
We should really implement something similar to Blink's kBreakAllLineBreakClassTable (which is based on WebKit's lineBreakTable).

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::midWordBreak):
(WebCore::Layout::InlineContentBreaker::tryBreakingTextRun const):

LayoutTests:

* TestExpectations:


Canonical link: https://commits.webkit.org/243272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284530 268f45cc-cd09-0410-ab3c-d52691b4dbfc